            - New routines signedGauss() and fromSignedGauss().
            - Regarding Reidemeister moves:
              + The (check, perform) variants of r1(), r2() and r3() are
                deprecated.  You should now use these routines _without_ extra
                check/perform arguments: they will always check for and (if
                possible) perform the relevant moves.
              + New routines hasR1(), hasR2() and hasR3() for checking only.
              + New read-only routines withR1(), withR2() and withR3() that (if
                possible) return a new link with the relevant moves performed.
            - Regarding knot signatures:
              + Signatures now support not just knots but any link diagrams
                with fewer than 64 link components.
              + Added an alias sig() for knotSig().  It is now recommended to
                use sig() and fromSig() instead of knotSig() and fromKnotSig(),
                since these names better reflect the scope of these routines.
                The original names knotSig() and fromKnotSig() have been kept
                (and are _not_ deprecated).
              + Routines sig() and knotSig() now take an additional argument to
                specify whether rotations should be considered equivalent.
            - Extended rewrite() and simplifyExhaustive() to work with all
              link diagrams with fewer than 64 link components.
            - Routine hasReducingPass() can now handle multiple-component links.
            - Added a variant of translate() that takes crossings instead of
              strand references.
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
            - Fixed a bug in fromDT() that was producing non-planar diagrams
              for some non-minimal encodings with spurious R1 twists.  The
              solution was to drop the old code completely (which was imported